[tool.poetry]
name = "difficulty-simulator"
version = "0.1.0"
description = ""
authors = ["Slixe <slixeprivate@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplot = "^0.1.9"
scipy = "^1.12.0"
pandas = "^2.2.1"
pyqt6 = "^6.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
